--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@sendgrid/mail": "^7.1.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9",
     "multer": "^1.4.2",
+    "request": "^2.88.2",
     "sharp": "^0.25.2",
     "validator": "^13.0.0"
   },
